...
                    app:layout_constraintEnd_toStartOf="@+id/sMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <android.widget.Button
                android:id="@+id/btnSave"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/configDurationNotification"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@color/duration_digit_color"
...
                android:textSize="@dimen/title_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/configStandardDuration" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/configDelayDuration"
                android:layout_width="213dp"
                android:layout_height="247dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@color/duration_digit_color"
...
                app:layout_constraintVertical_bias="0.0"
                app:timeUnits="hhmm">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <android.widget.Button
                android:id="@+id/btnLogout"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{()->viewModel.logout()}"
...
